setup firestore database to store user details

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,8 +45,10 @@ dependencies {
     // google material
     implementation 'com.google.android.material:material:1.4.0'
     
-    // firebase
+    // firebase fireStore
     implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-firestore:24.0.0'
+
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
